--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 			let colors = ["blue","red","green"];
 			let directUrls=[
 				{
-					name:"chrom插件", 
+					name:"chrom鎻掍欢", 
 					links:
 					[
 						{ contextPath:"https://github.com/jinliming2/Chrome-Charset/releases", port:1, content:"charset" ,type:3},
-						{ contextPath:"http://test.sinter.cn/", port:1, content:"统一工具" ,type:3},
+						{ contextPath:"http://test.sinter.cn/", port:1, content:"缁熶竴宸ュ叿" ,type:3},
 
 					]
 				}	
@@ -18,7 +18,7 @@
 
 		</script>
 
-		<!--内部代码 -->
+		<!--鍐呴儴浠ｇ爜 -->
 		<script type="text/javascript">
 				function genList(list){
 				   let divUrlContent = document.getElementById("divUrlContent");
@@ -45,7 +45,7 @@
 					}
 			}
 		</script>
-		<!--页面加载-->
+		<!--椤甸潰鍔犺浇-->
 		<script type="text/javascript">
 			window.onload=function()
 			{
